# rules_bun

./: .gitattributes  .mise.toml  CONTRIBUTING.md  MODULE.bazel  README.md
.bcr/: metadata.template.json
.github/workflows/: release.yml  release_prep.sh
bun/: BUILD.bazel  defs.bzl  extensions.bzl  repositories.bzl  toolchain.bzl
bun/private/: BUILD.bazel  command.bzl  detect.bzl  install.bzl  providers.bzl  resolved_toolchain.bzl  toolchains_repo.bzl  versions.bzl
bun/tests/: BUILD.bazel  detect_test.bzl  versions_test.bzl
docs/: BUILD.bazel
e2e/smoke/: BUILD  MODULE.bazel  README.md  WORKSPACE.bazel  fake_handlers.bzl  package-lock.json  package.json  pnpm-lock.yaml
mylang/: repositories.bzl
mylang/private/: toolchains_repo.bzl
scripts/: bootstrap_tools.sh
