"Bazel dependencies"

module(
    name = "levonk_rules_bun",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.4.1")
bazel_dep(name = "platforms", version = "0.0.5")

bazel_dep(name = "gazelle", version = "0.35.0", dev_dependency = True, repo_name = "bazel_gazelle")
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.4.1", dev_dependency = True)
bazel_dep(name = "aspect_bazel_lib", version = "1.32.1", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "6.1.2", dev_dependency = True)

bun = use_extension("//bun:extensions.bzl", "bun")
bun.toolchain(bun_version = "1.1.23")
use_repo(bun, "bun_toolchains")

register_toolchains("@bun_toolchains//:all")
