load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//bun:__subpackages__"],
)

bzl_library(
    name = "providers",
    srcs = ["providers.bzl"],
    visibility = ["//bun:__subpackages__"],
)

bzl_library(
    name = "install",
    srcs = ["install.bzl"],
    visibility = ["//bun:__subpackages__"],
)

bzl_library(
    name = "command",
    srcs = ["command.bzl"],
    visibility = ["//bun:__subpackages__"],
)

bzl_library(
    name = "detect",
    srcs = ["detect.bzl"],
    visibility = ["//bun:__subpackages__"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//bun:__subpackages__"],
)

bzl_library(
    name = "resolved_toolchain",
    srcs = ["resolved_toolchain.bzl"],
    visibility = ["//bun:__subpackages__"],
)
