# Override http_archive for local testing
local_repository(
    name = "levonk_rules_bun",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# rules_bun setup #
######################
# Fetches the rules_bun dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@levonk_rules_bun//bun:repositories.bzl", "bun_register_toolchains", "rules_bun_dependencies")

rules_bun_dependencies()
bun_register_toolchains(name = "bun", bun_version = "1.1.8")
